# memoreef

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  tester_feedback.yml
docs/: CODEX_TASKS.md  FAQ.md  GRANT_BRIEF.md  PRODUCTION_SHEET.md  ROADMAP.md  TESTER_GUIDE.md  TRUSTED_TESTER_FEEDBACK.md  TRUSTED_TESTER_INVITE.md
examples/: bookmarks.html
extensions/drop-to-reef/: README.md  manifest.json  popup.html  popup.js
memoreef/: __init__.py  auth.py  bookmarks.py  capture.py  cli.py  documents.py  server.py
scripts/: smoke_tester_readiness.py
site/: index.html  manifest.webmanifest  mobile.html  swipe.html  triage.html
site/img/kling_sources/horizontal/: S5_octopus_pearl.webm
tests/: test_bookmarks.py
